@@ -1,12 +1,10 @@
 package io.hhplus.tdd.domain.product.application;
 
 import io.hhplus.tdd.common.cache.CacheNames;
-import io.hhplus.tdd.common.exception.ErrorCode;
-import io.hhplus.tdd.domain.order.infrastructure.repository.OrderItemRepository;
 import io.hhplus.tdd.domain.product.domain.model.Product;
-import io.hhplus.tdd.domain.product.infrastructure.repository.ProductOptionRepository;
+import io.hhplus.tdd.domain.product.domain.service.ProductService;
+import io.hhplus.tdd.domain.product.domain.service.RankingService;
 import io.hhplus.tdd.domain.product.infrastructure.repository.ProductRepository;
-import io.hhplus.tdd.domain.product.exception.ProductException;
 import io.hhplus.tdd.domain.product.infrastructure.repository.ProductSalesDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CachePut;
@@ -15,57 +13,55 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class GetPopularProductsUseCase {
 
-    private final OrderItemRepository orderItemRepository;
-    private final ProductOptionRepository productOptionRepository;
     private final ProductRepository productRepository;
+    private final RankingService rankingService;
+    private final ProductService productService;
 
     public record Output(
             Long productId,
             String name,
             String description,
-            Long basePrice,
-            Long totalSalesQuantity
+            Long basePrice
     ) {
-        public static Output from(Product product, Long totalSalesQuantity) {
+        public static Output from(Product product) {
             return new Output(
                     product.getId(),
                     product.getName(),
                     product.getDescription(),
-                    product.getBasePrice(),
-                    totalSalesQuantity
+                    product.getBasePrice()
             );
         }
     }
 
-    /**
-     * 인기 상품 목록 조회 (최근 3일 기준 판매량 기준)
-     * 전체 리스트를 캐싱하여 빠른 응답 제공
-     * 매일 12:00에 캐시 워밍업을 통해 자동 갱신
-     *
-     * @return 인기 상품 리스트
-     */
+    // 전체 결과는 10분 캐시 (스케줄러가 8분마다 갱신)
+    // - sync=true로 Cache Stampede 방지 (동시 요청 시 첫 요청만 실행)
     @Transactional(readOnly = true)
-    @Cacheable(value = CacheNames.POPULAR_PRODUCTS_LIST,key = "'all'")
+    @Cacheable(value = CacheNames.POPULAR_PRODUCTS_LIST, key = "'all'", sync = true)
     public List<Output> execute() {
-        List<ProductSalesDto> products = productRepository.findPopular(LocalDateTime.now().minusDays(3));
-        return products.stream().map(productSalesDto -> Output.from(productSalesDto.product() , productSalesDto.totalSalesQuantity())).collect(Collectors.toList());
+        // 1. Redis에서 인기 상품 ID 목록 조회 (스코어 기반 정렬됨)
+        List<Long> popularProductIds = rankingService.getDailyTopRankIds(500);
+
+        // 2. ProductService를 통해 상품 정보 조회 (캐시 우선, MGET 활용)
+        List<Product> products = productService.getProductsByIds(popularProductIds);
+
+        return products.stream()
+                .map(product -> Output.from(
+                        product
+                ))
+                .toList();
     }
 
-    
-    // 스케쥴러에서 호출 , 무조건 캐시를 갱신
+    // 스케줄러에서 호출 - 캐시 워밍업
     @Transactional(readOnly = true)
-    @CachePut(value = "popularProducts",key = "'all'")
+    @CachePut(value = CacheNames.POPULAR_PRODUCTS_LIST, key = "'all'")
     public List<Output> refreshCache() {
-        List<ProductSalesDto> products = productRepository.findPopular(LocalDateTime.now().minusDays(3));
-        return products.stream().map(productSalesDto -> Output.from(productSalesDto.product() , productSalesDto.totalSalesQuantity())).collect(Collectors.toList());
+        return execute();
     }
 }
